// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test render button with loader 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button test render button with text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-cy="text"
  type="button"
>
  <p
    className="text undefined"
  >
    text
  </p>
</button>
`;

exports[`Button test render button without text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-cy=""
  type="button"
>
  <p
    className="text undefined"
  >
    
  </p>
</button>
`;

exports[`Button test render disabled button 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
